--- a/sass/block/_header.scss
+++ b/sass/block/_header.scss
@@ -1,7 +1,7 @@
 .header {
     min-height: 100vh;
     padding: 23px 0 83px 0;
-    background: url(../../image/bgcolor1.png) center center / cover no-repeat;
+    background: url(../image/bgcolor1.png) center center / cover no-repeat;
     position: relative;
     &__inner {
         height: 100px;
