--- a/sass/block/_media.scss
+++ b/sass/block/_media.scss
@@ -148,6 +148,17 @@
     }
 }
 @media (max-width: 767px) {
+    .header__navigation {
+        ul{
+            li{
+                a{  font-size: 15px;
+                    &:hover{
+                        color: rgb(0, 0, 0);
+                    }
+                }
+            }
+        }
+    }
     .map {
         overflow: hidden;
     }
@@ -194,6 +205,7 @@
         }
     }
    .header .menu-btn {
+       
         display: block;
     }
     .header__divider {
